# openGLES3_GameDev_CPP

./: CMakeLists.txt
Common/: CMakeLists.txt
Common/Include/: MatrixHelper.h  MatrixState.h  MtlLoaderUtil.h  ObjLoaderUtil.h  ShaderUtil.h  esUtil.h  textureUtil.h
Common/Source/: MatrixHelper.cpp  MatrixState.cpp  ShaderUtil.cpp  esUtil.c  objLoaderUtil.cpp
ch2/: CMakeLists.txt  SixPointedStar.cpp  SixPointedStar.h  ch2.cpp
ch3/: CMakeLists.txt  Sample3_1.cpp  Triangle.h
ch5/: CMakeLists.txt  ColorRect.h  ColorRect14.h  Cube13.h  Cube14.h  PointsOrLines.h  Sample5_1.cpp  Sample5_10.cpp  Sample5_12.cpp  Sample5_13.cpp  Sample5_14.cpp  Sample5_16.cpp  Sample5_2.cpp  Sample5_3.cpp  Sample5_4.cpp  Sample5_5.cpp  Sample5_6.cpp  Sample5_7.cpp  Sample5_8.cpp  Sample5_9.cpp  SixPointedStar.cpp  SixPointedStar.h  SixPointedStar12.cpp  SixPointedStar12.h  TrianglePair.h  belt.h  belt2.h  belt9.h  circle.h  circle10.h  circle9.h  cube.h
ch6/: Ball.h  Ball3.h  Ball4.h  Ball6.h  Ball9.h  CMakeLists.txt  Sample6_1.cpp  Sample6_2.cpp  Sample6_3.cpp  Sample6_4.cpp  Sample6_5.cpp  Sample6_6.cpp  Sample6_7.cpp  Sample6_8.cpp  Sample6_9.cpp  ch6.cpp  cube.h  cube8.h  frag1.sh  frag2.sh  frag3.sh  frag4.sh  frag5.sh  frag9.sh  vao.cpp  vertex1.sh  vertex2.sh  vertex3.sh  vertex4.sh  vertex5.sh  vertex6.sh  vertex9.sh
ch7/: CMakeLists.txt  Celestial.h  Earth.h  Sample7_1.cpp  Sample7_3.cpp  Sample7_4.cpp  Sample7_5.cpp  Sample7_6.cpp  Sample7_7.cpp  Sample7_9.cpp  TextureRect.h  point.h  point9.h  triangle.h
ch8/: CMakeLists.txt  ch8.cpp
ch9/: CMakeLists.txt  LoadUtil.h  LoadedObjectVertexOnly.h  ch9.cpp  groundshader.h  shaderobj.h
firstTriangle/: firstTriangle.sln
firstTriangle/firstTriangle/: firstTriangle.cpp  firstTriangle.vcxproj  firstTriangle.vcxproj.filters
firstTriangle/firstTriangle/Debug/: firstTriangle.pch  vc141.idb
firstTriangle/firstTriangle/Debug/firstTriangle.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  firstTriangle.lastbuildstate
